@@ -1,4 +1,5 @@
 Version 2.2.000
+    TODO: Cleanup new arrow metadatas
     TODO: SQL DB update
     TODO: SQL unit tests
     TODO: com/gmail/nossr50/database/FlatFileDatabaseManager.java:109 reporting data entries that need correction on each launch
